# runtime

./: .gitignore  CHANGES  CHANGES.RUNTIME  INSTALL  Makefile.ad  Makefile.defines.in  Makefile.defines_int.in  README  README.MACOSX  README.SYMBIAN  README.WIN32  TODO  configure.ad  srt.m4  srt.spec.in
apps/: Makefile.ad
distdir/: RUNTIME  autodist.conf  default  post-dist  pre-dist-runtime  runtime
doc/: Makefile.ad
docs/: ChangeLog  building.html  footer  header  index.html  index.html.in  index.html~  manual.html  masterindex.html  platforms.html  robo_definitions.html  robo_functions.html  robo_modules.html  robo_strutures.html  robo_variables.html  silcasync_hsilcutil2FAsync20Operation20Interface.html  silcasync_hsilcutil2FSilcAsyncOperation.html  silcasync_hsilcutil2FSilcAsyncOperationAbort.html  silcasync_hsilcutil2FSilcAsyncOperationPause.html  silcasync_hsilcutil2FSilcAsyncOperationStruct.html  silcasync_hsilcutil2Fsilc5Fasync5Fabort.html  silcasync_hsilcutil2Fsilc5Fasync5Falloc.html  silcasync_hsilcutil2Fsilc5Fasync5Ffree.html  silcasync_hsilcutil2Fsilc5Fasync5Fget5Fcontext.html  silcasync_hsilcutil2Fsilc5Fasync5Fhalt.html  (+750 more)
includes/: Makefile.ad  (+1 more)
lib/silcutil/tests/: Makefile.am  test_silcasync.c  test_silcatomic.c  test_silcbitops.c  test_silcbufferstream.c  test_silcbuffmt.c  test_silccpuid.c  test_silcdir.c  test_silcdll.c  test_silcenv.c  test_silcfdstream.c  test_silcfsm.c  test_silcglobal.c  test_silchashtable.c  test_silclist.c  test_silclocalnetstream.c  test_silcmime.c  test_silcmutex.c  test_silcnet.c  test_silcrand.c  test_silcregex.c  test_silcschedule.c  test_silcstack.c  test_silcstringprep.c  test_silcstrutil.c  test_silcthread.c  test_silcthreadqueue.c  test_silctime.c  test_silctimer.c  test_silctree.c  test_silcxml.c
(+135 files in other folders)
